micro-service-gradle/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: micro-service
  labels:
    istio-injection: enabled
