micro-service-gradle/k8s/03-micro-service-b.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: micro-service
  name: micro-service-b
  labels:
    app: micro-service-b
spec:
  ports:
    - port: 9999
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: micro-service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-service-b
  namespace: micro-service
spec:
  selector:
    matchLabels:
      app: micro-service-b
  replicas: 2
  template:
    metadata:
      labels:
        app: micro-service-b
    spec:
      containers:
        - name: micro-service-b
          image: cn.plantlink/micro-service-b:1.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
              name: http
