micro-service-gradle/k8s/04-micro-service-c.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: micro-service
  name: micro-service-c
  labels:
    app: micro-service-c
spec:
  ports:
    - port: 9999
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: micro-service-c
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-service-c
  namespace: micro-service
spec:
  selector:
    matchLabels:
      app: micro-service-c
  replicas: 2
  template:
    metadata:
      labels:
        app: micro-service-c
    spec:
      containers:
        - name: micro-service-c
          image: cn.plantlink/micro-service-c:1.0.3-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
              name: http
