micro-service-gradle/k8s/05-micro-service-d.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: micro-service
  name: micro-service-d
  labels:
    app: micro-service-d
spec:
  ports:
    - port: 9999
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: micro-service-d
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-service-d
  namespace: micro-service
spec:
  selector:
    matchLabels:
      app: micro-service-d
  replicas: 2
  template:
    metadata:
      labels:
        app: micro-service-d
    spec:
      containers:
        - name: micro-service-d
          image: harbor.local/cn.plantlink/micro-service-d:1.0.3-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
              name: http
